# time-service-rs

./: .gitattributes  .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
client/: Cargo.toml  build.rs
client/src/: main.rs
proto/: time_service.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
